@@ -883,6 +883,8 @@ DiagramGeneralPreferencePage_removeHideNoteLabel = Remove/hide note when the ann
 DiagramGeneralPreferencePage_synchronizedModeLabel = Synchronized mode for new diagrams
 DiagramOutlineWithBookPages_filtersTooltip = Filters
 DiagramOutlineWithBookPages_layersTooltip = Layers
+DiagramPrintingPreferencePage_optionsGroupText = Options
+DiagramPrintingPreferencePage_printDecorations = Print decorations
 DiagramRepairParticipant_removeDiagramElementTaskName = remove Diagram Elements
 DiagramRepairParticipant_restoreModelStateTaskName = Restoring model state
 DiagramRepairParticipant_saveModelStateTaskName = Saving model state
