@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2016 THALES GLOBAL SERVICES and others.
+ * Copyright (c) 2007, 2017 THALES GLOBAL SERVICES and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -68,7 +68,12 @@ public enum SiriusDiagramUiPreferencesKeys {
      * 
      * Says if the overlap is authorized between decoration group.
      */
-    PREF_AUTHORIZE_DECORATION_OVERLAP(boolean.class);
+    PREF_AUTHORIZE_DECORATION_OVERLAP(boolean.class),
+    /**
+     * 
+     * Says if the decorations are printed.
+     */
+    PREF_PRINT_DECORATION(boolean.class);
 
     /** The type of the preference. */
     private Class<?> type;
